--- a/src/components/OfferCard.css
+++ b/src/components/OfferCard.css
@@ -3,11 +3,13 @@
     flex-direction: column;
     align-items: center;
     margin: 1rem;
+    width: 30%;
+    align-items: flex-start;
 }
 
 .offer-card-img-container {
-    width: 33rem;
-    height: 22rem;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -18,7 +20,7 @@
 }
 
 .offer-card-desc-container {
-    width: 33rem;
+    width: 100%;
 }
 
 .offer-card-description {
